2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (gradmap_tile_validate): initialize
	the destination pixel region properly. Fixes bug #450291.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (gradmap_tile_validate)
	(find_max_gradient) minor code cleanup.

2007-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/newsprint.c (newsprint_dialog): corrected spacing.

2007-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/align_layers.c: set the minimum grid size to 1.
	Fixes bug #450001.

2007-06-22  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpprojection-construct.c (gimp_projection_initialize):
	Only consider layers with combine mode Normal when testing if any
	layer covers the entire specified area. Fixes bug #440154.

2007-06-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_restore): note that loading fonts may take
	a while (on Win32 at least).

2007-06-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-render.c (gimp_display_shell_render):
	Refactored the two helper functions render_image_init_info(_full)?
	and always use the shell base scale for the shell->mask. Fixes
	bug #448417.

2007-06-21  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfigwriter.c (gimp_config_writer_finish):
	if an error occured while writing the file, propagate the error
	and return FALSE.
	(gimp_config_writer_flush): improved error message.

2007-06-21  Sven Neumann  <sven@gimp.org>

	* app/base/base-types.h
	* app/base/tile-manager.[ch]
	* app/base/tile-manager-private.h: removed accessors for user_data.
	Instead pass the user_data when setting the validation proc.

	* app/base/tile-pyramid.c
	* app/core/gimpchannel.c
	* app/core/gimpprojection.c
	* app/core/gimpselection.c
	* app/tools/gimpiscissorstool.c: changed accordingly.

2007-06-21  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]