@@ -1,5 +1,10 @@
 2007-06-25  Sven Neumann  <sven@gimp.org>
 
+	* libgimpbase/gimpwire.c: if the wire protocol is used without
+	prior initialization, abort with g_error() instead of crashing.
+
+2007-06-25  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpiscissorstool.c (gradmap_tile_validate): initialize
 	the destination pixel region properly. Fixes bug #450291.
 
